--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <iframe 
-    height="430" 
-    width="350" 
-    src="https://bot.dialogflow.com/7ce7a5f3-afaa-440c-a5af-ffa58225eab0">
+  </head>
+  <body>
+    <iframe
+      allow="microphone;"
+      width="350"
+      height="430"
+      src="https://console.dialogflow.com/api-client/demo/embedded/7ce7a5f3-afaa-440c-a5af-ffa58225eab0"
+    >
     </iframe>
-</body>
+  </body>
 </html>
